﻿[B]1.0.5[/B]
- Forrás link vissza

[B]1.0.4[/B]
- Forrás link módosítása

[B]1.0.3[/B]
- Forrás változás követése
- Keresések mentése

[B]1.0.2[/B]
- Gyorsitas

[B]1.0.1[/B]
- Kategória szűrés a beállitásokban

[B]1.0.0[/B]
- Első verzió