@@ -13,6 +13,7 @@
 		<language>hu</language>
 		<platform>all</platform>
 		<news>
+			1.0.6 - Matrix kompatibilitás
 			1.0.5 - forrás link vissza
 			1.0.4 - forrás link módosítása
 			1.0.3 - forrás változás, keresések mentése
