@@ -1,4 +1,7 @@
-﻿[B]1.0.5[/B]
+﻿[B]1.0.6[/B]
+- Matrix kompatibilitás
+
+[B]1.0.5[/B]
 - Forrás link vissza
 
 [B]1.0.4[/B]
